Fix scrollbar not visible

--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -286,11 +286,14 @@
 }
 
 .scroll-bar {
-    -fx-background-color: #fff;
+    -fx-border-width: 1;
+    -fx-border-radius: 6;
+    -fx-border-color: #d8d8d8;
+    -fx-background-color: #f6f6f6;
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: #fff;
+    -fx-background-color: #e4e4e4;
     -fx-background-insets: 3;
 }
 
